--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
         <h1>Jogo da Adivinhação</h1>
         <section>
             <h3>Instruções</h3>
-            <p>Defina os intervalos e o numero de tentativas para inicar o jogo <br>
-                O jogador terá o numero de tentativas definido para acertar <br>
-                A cada palpite será informado se acertou, se o numero é maior ou menor <br>
-                Se as tentativas chegarem ao numero maximo e o jogador não acertar, ele perde </p>
+            <p>Defina os intervalos! <br>
+                Defina o número de tentativas! <br>
+                Tente acertar antes de acabar as tentativas!
             </section>
             <section id="sectionInicio" class="oculto">
                 <form id="iniciar">
@@ -27,7 +26,7 @@
             <section id="sectionPalpite" class="oculto">
                 <form id="formPalpite">
                     <label >Palpite</label>
-                    <input type="number" name="palpite" id="palpite">
+                    <input type="number" name="palpite" id="palpite" required>
                     <button type="submit">Enviar</button>
                 </form>
             </section>
